@@ -3,6 +3,12 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2008/02/11
+	* Expanded the script command 'input': (bugreport:811) [FlavioJS]
+	- two new optional arguments 'min' and 'max'
+	- return value indicating if it's in the correct range
+	- config variables for the default value of the arguments:
+	  'input_min_value' and 'input_max_value' in script_athena.conf
 2008/02/10
 	* Added two missing opt2 values, for Angelus and Bleeding status
 	* Fixed Warp Portal code sometimes producing errors/crashes in the case
